# HEcontract

./: Precompiledtest.sol  README.md
homomorphicencryptiontest/: CMakeLists.txt  elgamal.cpp  helibtest.cpp  main.cpp  tfhe.cpp
homomorphicencryptiontest/include/MDLToolkit/: decryptor.hpp  encryptor.hpp  tfhe_ctxt.hpp
homomorphicencryptiontest/paillier/: paillier.cpp  paillier.h
precontracttest/contracts/: Precall.sol  Precompiledtest.sol
precontracttest/migrations/: 2_deploy_contract.js  3_deploy_contract.js
precontracttest/test/: testPrecall.test.js  testPrecompiledtest.test.js
